--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   },
   "homepage": "https://github.com/react-navigation/react-navigation-stack#readme",
   "dependencies": {
+    "react-native-screens": "^1.0.0-alpha.3"
   },
   "devDependencies": {
     "@expo/vector-icons": "^6.2.0",
